--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -12,10 +12,29 @@ div.container {
 	overflow-y: overlay; 
 }
 
+.user-form.container {
+	display: grid;
+	grid-template-rows: min-content auto 2rem;
+	grid-template-columns: 1fr 5fr 1fr;
+	grid-column-start: 2;
+	height: 100vh;
+	grid-gap: 1rem;
+	overflow-y: overlay;
+}
+
+.user-form.container form {
+	text-align: center;
+}
+
 header {
 	grid-column: 2;
 	display: flex;
 	justify-content: space-around;
+}
+
+.user-form.container header {
+	flex-direction: column;
+	align-items: center;
 }
 
 main {
