--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/layout.css" />
 </head>
 <body>
-	<div class="container">
+	<div class="container cart">
 		<header>
 			<h1>Pantry+</h1>
 			<nav>
