--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -16,59 +16,82 @@
 	</script>
 </head>
 <body onload="initialize()">
-	<div class="container">
+	<div class="container shopping">
 		<header>
-			<h1>
-				Pantry+
-			</h1>
 			<nav>
 				<ul>
-					<a th:href="'/carts/' + ${cart.getId()}">Cart</a>
+					<li class="previous">
+						<h2>Form</h2>
+					</li>
+					<li class="current">
+						<h2>Shopping</h2>
+					</li>
+					<li>
+						<h2>
+							<a th:href="'/carts/' + ${cart.getId()}">Cart</a>
+						</h2>
+					</li>
 				</ul>
 			</nav>
 		</header>
-		<main>
-			<div th:each="category : ${categories}" class="category-items" th:unless="${category.name == 'After School Snacks' and cart.user.schoolAgeChildren == 0}">
-				<section class="category">
-					<h2 th:text="${category.name}"/>
-					<p class="indicator visible">+</p>
-					<p class="indicator hidden">-</p>
-					<p th:if="${category.name == 'Meat'}">
-						<span>Available lbs. of Meat: </span>
-						<span th:text="${cart.getUser().calculateMeatTotal()}"/>
-					</p>
-					<p th:if="${category.name == 'Meat'}">
-						<span>Total lbs. of Meat used: </span>
-						<span class="meat-used" th:text="${cart.getMeatPoundsUsed()}"/>
-					</p>
-					<p th:if="${category.name == 'Coupon'}">
-						<span>Available points of Coupons: </span>
-						<span class="coupon-total" th:text="${cart.getUser().calculateCouponTotal()}"/>
-					</p>
-					<p th:if="${category.name == 'Coupon'}">
-						<span>Total coupons used: </span>
-						<span class="coupon-used" th:text="${cart.getCouponsUsed()}"/>
-					</p>
-				</section>
-				<ul class="items hidden">
-					<li class="item" th:each="product : ${category.products}" th:unless="${product.name == 'Diapers' and cart.user.hasInfants() == false}">
-						<h3 th:text="${product.name}"/>
-						<img class="product-image" th:src="${product.image}" draggable="false"/>
-						<div th:id="'product-'+${product.id}" th:switch="true" class="switch">
-							<div th:case="${category.name == 'Coupon'}" class="case">
-								<div th:replace="fragments/interfaces :: .coupon"/>
+		<div class="aside-main">
+			<aside>
+				<img class="logo" src="images/broad-street-logo.jpg"/>
+				<div class="address">
+					<span>Get directions to our pantry:</span>
+					<a href="https://goo.gl/maps/LSXtd39SXJo">
+						<p>
+							760 East Broad Street
+						</p>
+						<p>
+							Columbus, Ohio 43205
+						</p>
+					</a>
+				</div>
+			</aside>
+			<main>
+				<div th:each="category : ${categories}" class="category-items" th:unless="${category.name == 'After School Snacks' and cart.user.schoolAgeChildren == 0}">
+					<section class="category">
+						<h2 th:text="${category.name}"/>
+						<p class="indicator visible">+</p>
+						<p class="indicator hidden">-</p>
+						<p th:if="${category.name == 'Meat'}">
+							<span>Available lbs. of Meat: </span>
+							<span th:text="${cart.getUser().calculateMeatTotal()}"/>
+						</p>
+						<p th:if="${category.name == 'Meat'}">
+							<span>Total lbs. of Meat used: </span>
+							<span class="meat-used" th:text="${cart.getMeatPoundsUsed()}"/>
+						</p>
+						<p th:if="${category.name == 'Coupon'}">
+							<span>Available points of Coupons: </span>
+							<span class="coupon-total" th:text="${cart.getUser().calculateCouponTotal()}"/>
+						</p>
+						<p th:if="${category.name == 'Coupon'}">
+							<span>Total coupons used: </span>
+							<span class="coupon-used" th:text="${cart.getCouponsUsed()}"/>
+						</p>
+					</section>
+					<ul class="items hidden">
+						<li class="item" th:each="product : ${category.products}" th:unless="${product.name == 'Diapers' and cart.user.hasInfants() == false}">
+							<img class="product-image" th:src="${product.image}" draggable="false"/>
+							<h3 th:text="${product.name}"/>
+							<div th:id="'product-'+${product.id}" th:switch="true" class="switch">
+								<div th:case="${category.name == 'Coupon'}" class="case">
+									<div th:replace="fragments/interfaces :: .coupon"/>
+								</div>
+								<div th:case="${category.name == 'Meat'}" class="case">
+									<div th:replace="fragments/interfaces :: .meat"/>
+								</div>
+								<div th:case="true" class="case">
+									<div th:replace="fragments/interfaces :: .dichotomous"/>
+								</div>
 							</div>
-							<div th:case="${category.name == 'Meat'}" class="case">
-								<div th:replace="fragments/interfaces :: .meat"/>
-							</div>
-							<div th:case="true" class="case">
-								<div th:replace="fragments/interfaces :: .dichotomous"/>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</main>
+						</li>
+					</ul>
+				</div>
+			</main>
+		</div>
 		<footer>
 			<small>Created by NAPOSCA</small>
 		</footer>
