Changed google maps link to open directions to the food pantry rather than just showing it

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -30,7 +30,7 @@
 				<img class="logo" src="images/broad-street-logo.jpg"/>
 				<div class="address">
 					<span>Get directions to our pantry:</span>
-					<a href="https://goo.gl/maps/LSXtd39SXJo">
+					<a href="https://goo.gl/maps/hYbaW9JbYFr">
 						<p>
 							760 East Broad Street
 						</p>
