Added animations and autofocused on first input of form

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -4,6 +4,7 @@
 	<title>Welcome to BSFP</title>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<script type="text/javascript" src="/js/user-form.js"></script>
@@ -45,7 +46,7 @@
 				<h3>Please enter your information</h3>
 				<form action="/user-form">
 					<label for="first-name">First name:</label>
-					<input type="text" name="firstName" maxlength="20" id="first-name"></input>
+					<input type="text" name="firstName" maxlength="20" id="first-name" autofocus="true"></input>
 
 					<br />
 
