Used th:replace again to save more code

--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -81,9 +81,7 @@
 				</div>
 			</main>
 		</div>
-		<footer>
-			<small>Created by NAPOSCA</small>
-		</footer>
+		<footer th:replace="user-form :: footer"/>
 	</div>
 </body>
 </html>
