--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Welcome to BSFP</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
@@ -28,7 +29,7 @@
 		</header>
 		<div class="aside-main">
 			<aside>
-				<img class="logo" src="images/broad-street-logo.jpg"/>
+				<img class="logo" src="/images/broad-street-logo.jpg"/>
 				<div class="address">
 					<span>Get directions to our pantry:</span>
 					<a href="https://goo.gl/maps/hYbaW9JbYFr">
