--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 	<script type="text/javascript" src="/js/user-form.js"></script>
 </head>
 <body onload="initializeUserForm()">
