--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>Welcome to BSFP</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/media-queries.css"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
@@ -30,15 +31,12 @@
 		</header>
 		<div class="aside-main">
 			<aside>
-				<img class="logo" src="/images/broad-street-logo.jpg"/>
+				<img class="logo" src="/images/broad-street-logo.png"/>
 				<div class="address">
-					<span>Get directions to our pantry:</span>
+					<p class="directions">Get directions to our pantry:</p>
 					<a href="https://goo.gl/maps/hYbaW9JbYFr">
-						<p>
-							760 East Broad Street
-						</p>
-						<p>
-							Columbus, Ohio 43205
+						<p class="address">
+							760 E. Broad St, Columbus, OH 43205
 						</p>
 					</a>
 				</div>
