--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Pantry+</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/slide-toggle.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/media-queries.css"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
