--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/media-queries.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/user-form.media-queries.css"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
