--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Pantry+ | Cart</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/slide-toggle.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/cart.media-queries.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 </head>
 <body>
