changed choice items to choice points in shopping coupon aside

--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -50,7 +50,7 @@
 						<span>lbs.</span>
 					</p>
 					<p class="coupon-stats">
-						<span>Choice Items: </span>
+						<span>Choice Points: </span>
 						<span class="coupon-used" th:text="${cart.getCouponsUsed()}"/>
 						<span>/</span>
 						<span class="coupon-total" th:text="${cart.getUser().calculateCouponLimit()}"/>
