Added address and birthdate to order email

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -13,6 +13,14 @@
 			<span th:text="${lastName}"/>
 		</p>
 		<p>
+			<span>Birthdate: </span>
+			<span th:text="${birthdate}"/>
+		</p>
+		<p>
+			<span>Address: </span>
+			<span th:text="${address}"/>
+		</p>
+		<p>
 			<span>Family Size: </span>
 			<span th:text="${familySize}"/>
 		</p>
