Started testing the user in the cart model as a map

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="personal-info">
+	<div class="personal-info" th:object="${user}">
 		<h1>
 			<span th:text="${firstName}"/>
 			<span th:text="${lastName}"/>
