directions open in another page

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -34,7 +34,7 @@
 				<img class="logo" src="/images/broad-street-logo.png"/>
 				<div class="address">
 					<p class="directions">Get directions to our pantry:</p>
-					<a href="https://goo.gl/maps/hYbaW9JbYFr">
+					<a href="https://goo.gl/maps/hYbaW9JbYFr" target="_blank">
 						<p class="address">
 							760 E. Broad St, Columbus, OH 43205
 						</p>
