--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/cart.media-queries.css"/>
-	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
-	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
 </head>
 <body>
