Fixed an HTML issue with an old Thymeleaf attribute hidding in a P tag.

--- a/src/main/resources/templates/invalid-zipcode.html
+++ b/src/main/resources/templates/invalid-zipcode.html
@@ -11,7 +11,7 @@
 			<h1>
 				Invalid Zipcode
 			</h1>
-			<p th:text="${error}">Please check your zipcode input try again, if this continues, please contact the pantry.</p>
+			<p>Please check your zipcode input try again, if this continues, please contact the pantry.</p>
 		</div>
 	</div>
 </body>
