about-us html created and added to PantryController

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -122,7 +122,7 @@
 			</main>
 		</div>
 		<footer>
-			<small>Created by <a href="/about-us">NAPOSCA</a></small>
+			<small>Created by <a href="about-us.html">NAPOSCA</a></small>
 		</footer>
 	</div>
 </body>
