added header and that's all

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome to BSFP</title>
+	<title>About Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/user-form.media-queries.css"/>
-	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
-	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
-	<script type="text/javascript" src="/js/user-form.js"></script>
 </head>
-<body>
-	<p>hi</p>
+<body onload="initialize()">
+	<div class="container shopping">
+		<header>
+			<nav>
+				<ul>
+					<li class="previous">
+						<h2>Naposca</h2>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	</div>	
 </body>
 </html>
