--- a/src/main/resources/templates/invalid-zipcode.html
+++ b/src/main/resources/templates/invalid-zipcode.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 </head>
 <body>
-	<div class="container">
+	<div class="container confirmation">
 		<div class="message">
 			<h1>
 				Invalid Zipcode
