working on style and added picture

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
-	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
+	<title>About Us</title>
+	<link rel="stylesheet" type="text/css" href="/css/about-us.css"/>
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 </head>
-<body onload="initialize()">
-	<div class="container shopping">
-		<header>
-			<nav>
-				<ul>
-					<li class="previous">
-						<h2>Naposca</h2>
-					</li>
-				</ul>
-			</nav>
-		</header>
-	</div>	
+<header>
+	<h1>N.A.P.O.S.C.A.</h1>
+</header>
+<body>
+	<img src="/images/naposca640.jpg" alt="about-us"/>
 </body>
 </html>
