--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -12,6 +12,12 @@
 	<h1>N.A.P.O.S.C.A.</h1>
 </header>
 <body>
-	<img src="/images/naposca640.jpg" alt="about-us"/>
+	<main>
+	<div>
+		<p><em>Not Another Plain Old Shopping Cart Application</em></p>
+		<img src="/images/naposca640.jpg" alt="about-us"/>
+		<p>Team NAPOSCA is: Alex Malcolm, Brooke Hauser, Jeff Salisbury, Michael Quinten, Marc Gold, and Matt McCall</p>       
+	</div>
+	</main>
 </body>
 </html>
