added footer and return link

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -19,5 +19,8 @@
 		<p>Team NAPOSCA is: Alex Malcolm, Brooke Hauser, Jeff Salisbury, Michael Quinten, Marc Gold, and Matt McCall</p>       
 	</div>
 	</main>
+<footer>
+<a href="/">Return</a>
+</footer>
 </body>
 </html>
