--- a/src/main/resources/static/css/about-us.css
+++ b/src/main/resources/static/css/about-us.css
@@ -37,32 +37,7 @@ img {
 	border-radius: 10px;
 }
 
-/* div.container {
-	background-color: hsla(193, 55%, 90%, 1);
-	min-height: calc(100vh - 1rem);
-	padding-bottom: 1rem;
+footer {
+	text-align: center;
+	margin-top: 10px;
 }
-
-section.category {
-	background-color: #d3e3ea;
-	padding: var(--rounding-padding);
-	margin: var(--rounding-padding);
-	border-radius: var(--rounding-padding);
-	box-shadow: 0px 7px 13px -7px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-li.item {
-	background-color: #f1d8d8;
-	margin: 0.4rem 1.2rem;
-	border-radius: var(--rounding-padding);
-	padding: var(--rounding-padding);
-	/*border: 2px solid black;*/
-	box-shadow: 0px 5px 13px -7px;
-	-ms-user-select: none;
-	user-select: none;
-} */
