changed zipcode in user-form to textbox and fixed controller to only allow users in right zipcodes

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -63,17 +63,12 @@
 					<label for="address">Address:</label>
 					<input type="text" name="address" id="address" required="true"/>
 
-					<p>Zip code:</p>
-					<select name="zipCode" required="true">
-						<option selected="true" disabled="true" hidden="true" value="">Select...</option>
-						<option value="43203">43203</option>
-						<option value="43205">43205</option>
-						<option value="43209">43209</option>
-						<option value="43213">43213</option>
-						<option value="43215">43215</option>
-						<option value="Partnership">I am a partner</option>
-						<option value="Other">Other</option>
-					</select>
+					<br />
+
+					<label for="zipCodeInput">Zip Code:</label>
+					<input type="text" name="zipCodeInput" id="zipCodeInput" required="true"/>
+
+					<br />
 
 					<p>Total family size:</p>
 					<select class="familySizeMenu" name="familySize" required="true">
@@ -88,13 +83,13 @@
 						<option value="8">8</option>
 						<option value="9">9+</option>
 					</select>
-					
+
 					<p>Children age 3 or younger:</p>
 					<input id="yes" type="radio" name="infants" value="true"/>
 					<label for="yes">Yes</label>
 					<input id="no" type="radio" name="infants" value="" checked="true"/>
 					<label for="no">No</label>
-					
+
 					<p>Children between the ages of 4 and 17:</p>
 					<select class="schoolKidsMenu" name="schoolkidsCount" required="true">
 						<option selected="true" disabled="true" hidden="true" value="">Select...</option>
@@ -115,10 +110,10 @@
 					<select name="pickUpDate" required="true">
 						<option selected="true" disabled="true" hidden="true" value="">Select...</option>
 						<option value="2018-04-17">04/17/2018</option>
-					</select>	
+					</select>
 
 					<p><input type="submit" value="Start Shopping"/></p>
-				</form> 
+				</form>
 			</main>
 		</div>
 		<footer>
